--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>The Tiny Theorycrafter - Pre-Launch</title>
-    <link href="https://fonts.googleapis.com/css?family=Cousine:400,700,1000&display=swap" rel="stylesheet">
-    <script async="" src="https://www.googletagmanager.com/gtag/js?id=UA-162661188-1"></script>
+    <link href="fonts.css" rel="stylesheet">
+    <!-- <script async="" src="https://www.googletagmanager.com/gtag/js?id=UA-162661188-1"></script> -->
     <style>
         a,
         abbr,
@@ -610,20 +610,22 @@
             }
         }
     </style>
-    <script>
+    <!-- <script>
         function a() {
             dataLayer.push(arguments)
         }
         window.dataLayer = window.dataLayer || [], a("js", new Date), a("config", "UA-162661188-1");
-    </script>
-    <script async="" src="//api.adinplay.com/libs/aiptag/pub/TTF/thetinytheorycrafter.com/tag.min.js"></script>
-    <link rel="stylesheet" href="/orb-spritesheet.6d9c02ae.css">
-    <link rel="stylesheet" href="/vex.0da6019e.css">
-    <link rel="stylesheet" href="/vex-theme-plain.a5a0c2de.css">
-    <link rel="stylesheet" href="/main.39e71d9e.css">
+    </script> -->
+    <!-- <script async="" src=".//api.adinplay.com/libs/aiptag/pub/TTF/thetinytheorycrafter.com/tag.min.js"></script> -->
+    <link rel="stylesheet" href="./orb-spritesheet.6d9c02ae.css">
+    <link rel="stylesheet" href="./vex.0da6019e.css">
+    <link rel="stylesheet" href="./vex-theme-plain.a5a0c2de.css">
+    <link rel="stylesheet" href="./main.39e71d9e.css">
 </head>
 
 <body class="ttt">
+    <script src="chs.js"></script>
+    <script src="core.js"></script>
     <div class="screen-dimmer"></div>
     <div id="game-render-wrapper" class="game-render-wrapper game-panel"> <button
             class="toggle-game-panel toggle-panel">🡅</button> <canvas id="game-render-canvas"
@@ -875,7 +877,7 @@
             <h1 style="font-size:48px;font-weight:1000;">PRE-LAUNCH!</h1>
             <div class="motd-content"> <a target="_blank" href="https://discord.gg/jVuYK7C"
                     style="color:#7289da;text-decoration:none;font-size:24px;">Join our <img async="" decoding="async"
-                        src="https://discordapp.com/assets/fc0b01fe10a0b8c602fb0106d8189d9b.png"
+                        src="fc0b01fe10a0b8c602fb0106d8189d9b.png"
                         style="width:160px;transform:translateY(40%);"> for updates!</a> <br> <br> Welcome to <b>The
                     Tiny Theorycrafter</b> Pre-Launch!<br> <br> Get ready to theorycraft your way to victory as you
                 explore the world of Solus. This is an idle/incremental game of min/maxing and ensuring your character
@@ -1250,7 +1252,24 @@
             </div>
         </div>
     </div>
-    <script src="/main.019cfb63.js" type="text/javascript"></script>
+    <script src="./main.019cfb63.js" type="text/javascript"></script>
+<!--客服 开始-->
+<script src="//g8hh.com.cn/static/js/jquery.min.js"></script>
+<link rel="stylesheet" href="//g8hh.com.cn/static/css/kf.css" type="text/css" media="screen" charset="utf-8">
+<script src="//g8hh.com.cn/static/js/kf.js"></script>
+<!-- 客服 结束 -->
+<!--站长统计-->
+<div style="display: none">
+    <script>
+    var _hmt = _hmt || [];
+    (function() {
+      var hm = document.createElement("script");
+      hm.src = "https://hm.baidu.com/hm.js?dbb7ff142f4d4b68546c93b9cd6e9328";
+      var s = document.getElementsByTagName("script")[0]; 
+      s.parentNode.insertBefore(hm, s);
+    })();
+    </script>
+        </div>
 </body>
 
 </html>
