--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>The Tiny Theorycrafter - Pre-Launch</title>
     <link href="fonts.css" rel="stylesheet">
-    <!-- <script async="" src="https://www.googletagmanager.com/gtag/js?id=UA-162661188-1"></script> -->
+    <!-- <script defer="" src="https://static.cloudflareinsights.com/beacon.min.js"
+        data-cf-beacon="{&quot;token&quot;: &quot;8d7400d11d75493383f7c4361c5df0c9&quot;}"></script> -->
     <style>
         a,
         abbr,
@@ -610,17 +611,10 @@
             }
         }
     </style>
-    <!-- <script>
-        function a() {
-            dataLayer.push(arguments)
-        }
-        window.dataLayer = window.dataLayer || [], a("js", new Date), a("config", "UA-162661188-1");
-    </script> -->
-    <!-- <script async="" src=".//api.adinplay.com/libs/aiptag/pub/TTF/thetinytheorycrafter.com/tag.min.js"></script> -->
     <link rel="stylesheet" href="./orb-spritesheet.6d9c02ae.css">
     <link rel="stylesheet" href="./vex.0da6019e.css">
     <link rel="stylesheet" href="./vex-theme-plain.a5a0c2de.css">
-    <link rel="stylesheet" href="./main.39e71d9e.css">
+    <link rel="stylesheet" href="./main.d2b62630.css">
 </head>
 
 <body class="ttt">
@@ -706,7 +700,6 @@
                     data-balloon-length="xlarge">Damage taken/sec</span><span
                     class="p-value damageTakenPerMinute">{{ damageTakenPerMinute }}</span> </li>
         </ul>
-        <div class="metrics-banner-ad left" id="thetinytheorycrafter-com_300x250"></div>
     </div>
     <div class="stat-panel slide-out" style="display:block;"> <button class="toggle-stat-panel toggle-panel">🡆</button>
         <ul>
@@ -872,12 +865,10 @@
     </div>
     <div class="modal motd">
         <div class="inner"> <button class="close-button">X</button>
-            <div class="modal-side-banner-ad left" id="thetinytheorycrafter-com_300x250_2"></div>
-            <div class="modal-side-banner-ad right" id="thetinytheorycrafter-com_300x250_3"></div>
             <h1 style="font-size:48px;font-weight:1000;">PRE-LAUNCH!</h1>
             <div class="motd-content"> <a target="_blank" href="https://discord.gg/jVuYK7C"
                     style="color:#7289da;text-decoration:none;font-size:24px;">Join our <img async="" decoding="async"
-                        src="fc0b01fe10a0b8c602fb0106d8189d9b.png"
+                        src="https://discordapp.com/assets/fc0b01fe10a0b8c602fb0106d8189d9b.png"
                         style="width:160px;transform:translateY(40%);"> for updates!</a> <br> <br> Welcome to <b>The
                     Tiny Theorycrafter</b> Pre-Launch!<br> <br> Get ready to theorycraft your way to victory as you
                 explore the world of Solus. This is an idle/incremental game of min/maxing and ensuring your character
@@ -885,6 +876,16 @@
                 them to earn Quiddity and purchase new abilities.<br> <br> Be sure to right-click and PAN the skill tree
                 around. Mouse over (or tap on mobile) everything you see - there are often tooltips waiting to help you
                 out!<br>
+                <hr>
+                <h3>Pre-Launch Patch Notes - v0.9.2</h3> <span class="patch-notes-enhancements">Enhancements:</span>
+                <ul class="list">
+                    <li>Removed all ads from the game. Screw ads!</li>
+                </ul> <span class="patch-notes-bugfixes">Bugfixes:</span>
+                <ul class="list">
+                    <li>Skill Points should properly update visually after a prestige</li>
+                    <li>"Jumble" no longer freezes the game</li>
+                    <li>A few health nodes had incorrect health values (#287 and 288)</li>
+                </ul>
                 <hr>
                 <h3>Pre-Launch Patch Notes - v0.9.1</h3> <span class="patch-notes-enhancements">Enhancements:</span>
                 <ul class="list">
@@ -1252,24 +1253,23 @@
             </div>
         </div>
     </div>
-    <script src="./main.019cfb63.js" type="text/javascript"></script>
+    <script src="./main.41b76679.js" type="text/javascript"></script>
 <!--客服 开始-->
-<script src="//g8hh.com.cn/static/js/jquery.min.js"></script>
-<link rel="stylesheet" href="//g8hh.com.cn/static/css/kf.css" type="text/css" media="screen" charset="utf-8">
-<script src="//g8hh.com.cn/static/js/kf.js"></script>
+<script src="//g8hh.github.io/static/js/jquery.min.js"></script>
+<link rel="stylesheet" href="//g8hh.github.io/static/css/kf.css" type="text/css" media="screen" charset="utf-8">
+<script src="//g8hh.github.io/static/js/kf.js"></script>
 <!-- 客服 结束 -->
 <!--站长统计-->
-<div style="display: none">
-    <script>
-    var _hmt = _hmt || [];
-    (function() {
-      var hm = document.createElement("script");
-      hm.src = "https://hm.baidu.com/hm.js?dbb7ff142f4d4b68546c93b9cd6e9328";
-      var s = document.getElementsByTagName("script")[0]; 
-      s.parentNode.insertBefore(hm, s);
-    })();
-    </script>
-        </div>
+    <div style="display: none">
+<script>
+var _hmt = _hmt || [];
+(function() {
+  var hm = document.createElement("script");
+  hm.src = "https://hm.baidu.com/hm.js?828597e93cee632465679b7ef35edfd5";
+  var s = document.getElementsByTagName("script")[0]; 
+  s.parentNode.insertBefore(hm, s);
+})();
+</script>    </div>
 </body>
 
 </html>
