--- a/index.html
+++ b/index.html
@@ -868,7 +868,7 @@
             <h1 style="font-size:48px;font-weight:1000;">PRE-LAUNCH!</h1>
             <div class="motd-content"> <a target="_blank" href="https://discord.gg/jVuYK7C"
                     style="color:#7289da;text-decoration:none;font-size:24px;">Join our <img async="" decoding="async"
-                        src="https://discordapp.com/assets/fc0b01fe10a0b8c602fb0106d8189d9b.png"
+                        src="fc0b01fe10a0b8c602fb0106d8189d9b.png"
                         style="width:160px;transform:translateY(40%);"> for updates!</a> <br> <br> Welcome to <b>The
                     Tiny Theorycrafter</b> Pre-Launch!<br> <br> Get ready to theorycraft your way to victory as you
                 explore the world of Solus. This is an idle/incremental game of min/maxing and ensuring your character
@@ -1255,21 +1255,22 @@
     </div>
     <script src="./main.41b76679.js" type="text/javascript"></script>
 <!--客服 开始-->
-<script src="//g8hh.github.io/static/js/jquery.min.js"></script>
-<link rel="stylesheet" href="//g8hh.github.io/static/css/kf.css" type="text/css" media="screen" charset="utf-8">
-<script src="//g8hh.github.io/static/js/kf.js"></script>
+<script src="//g8hh.com.cn/static/js/jquery.min.js"></script>
+<link rel="stylesheet" href="//g8hh.com.cn/static/css/kf.css" type="text/css" media="screen" charset="utf-8">
+<script src="//g8hh.com.cn/static/js/kf.js"></script>
 <!-- 客服 结束 -->
 <!--站长统计-->
-    <div style="display: none">
-<script>
-var _hmt = _hmt || [];
-(function() {
-  var hm = document.createElement("script");
-  hm.src = "https://hm.baidu.com/hm.js?828597e93cee632465679b7ef35edfd5";
-  var s = document.getElementsByTagName("script")[0]; 
-  s.parentNode.insertBefore(hm, s);
-})();
-</script>    </div>
+<div style="display: none">
+    <script>
+    var _hmt = _hmt || [];
+    (function() {
+      var hm = document.createElement("script");
+      hm.src = "https://hm.baidu.com/hm.js?dbb7ff142f4d4b68546c93b9cd6e9328";
+      var s = document.getElementsByTagName("script")[0]; 
+      s.parentNode.insertBefore(hm, s);
+    })();
+    </script>
+        </div>
 </body>
 
 </html>
